# openai_hackathon_nfz

./: README.md  package-lock.json  schema.json
app/: layout.tsx  page.tsx
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/bot/: AgentProcessor.py  CustomBroAgent.py  LangchainMessagesProcessor.py  ToolFrame.py  router.py
components/: NFZSearch.tsx  VoiceInput.tsx
lib/: nfz-api.ts  utils.ts
nfz/: nfz.txt
twilio-bot/: AgentProcessor.py  Dockerfile  LICENSE  OpenAiAgentProcessor.py  bot.py  bot_types.py  lista_benefitów.txt  minimal_example.py  nfz_api.py  nfz_example.py  pcc-deploy.toml  pyproject.toml  requirements.txt  server.py  twilio_sms.py
twilio-bot/templates/: streams.xml
webapp/components/: session-configuration-panel.tsx
websocket-server/src/: sessionManager.ts
